--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css">
   <script src="set-1.js" defer></script>
   <script src="set-2.js" defer></script>
+  <script src="set-3.js" defer></script>
+  <script src="set-4.js" defer></script>
   <script src="sets.js" defer></script>
   <script src="code.js" defer></script>
 </head>
