--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="set-2.js" defer></script>
   <script src="set-3.js" defer></script>
   <script src="set-4.js" defer></script>
+  <script src="set-5.js" defer></script>
+  <script src="set-6.js" defer></script>
   <script src="sets.js" defer></script>
   <script src="code.js" defer></script>
 </head>
